--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.0",
     "@mui/material": "^6.2.0",
+    "@mui/x-data-grid": "^7.23.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "mongodb": "^6.12.0",
